--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
 	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<script src="app.js"></script>
 	<script src="bootbox.min.js"></script>
@@ -21,7 +22,7 @@
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
 					<li class="active">
-						<a href="#">Ավելացնել անուն</a>
+						<a onClick="addDialog()">Ավելացնել անուն</a>
 					</li>
 				</ul>
 			</div>
@@ -30,7 +31,7 @@
 		<div class="container">
 			<div class="jumbotron">
 				<button type="button" class="btn btn-lg btn-primary" onClick="randomWord()">Պատահական անուն</button>
-				<p>Մշակվել է Նարեկ Բաբաջանյանի և Էրիկ Առաքելյանի կողմից</p>
+				<p>Developed by Narek Babajanyan</p>
 				<br/>
 				<h1 id="guessword" style="font-size: 80px">ՆաիրիWord</h1>	
 			</div>
